<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_LBL_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center"
        tools:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Subtitle -->

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_LBL_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="18sp"
        tools:text="@string/media_tracker"
        app:layout_constraintTop_toBottomOf="@id/main_LBL_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Counter Card -->

    <androidx.cardview.widget.CardView
        android:id="@+id/main_CARD_counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/main_LBL_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/main_LBL_counter_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/watched"
                android:textSize="18sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/main_LBL_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_count"
                android:textSize="@dimen/_count_text_size"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- RecyclerView -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_RV_media"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/main_CARD_counter"
        app:layout_constraintBottom_toTopOf="@id/main_FAB_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Logo -->





    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_FAB_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_item"
        app:srcCompat="@drawable/ic_add_24"
        app:tint="@android:color/white"
        app:backgroundTint="@color/bluestBlue"
        app:fabCustomSize="64dp"
        app:maxImageSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>